syntax = "proto3";

package family;

option java_package = "com.example.family";
option java_multiple_files = true;

message NodeInfo {
  string host = 1;
  int32 port = 2;
}

message FamilyView {
  repeated NodeInfo members = 1;
}

message ChatMessage {
  int32 message_id = 1;
  string text = 2;
}

message Empty {}

service FamilyService {
  rpc Join (NodeInfo) returns (FamilyView);
  rpc GetFamily (Empty) returns (FamilyView);
}
